Cleanup
Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>