@@ -127,8 +127,6 @@ configure(subprojects.findAll {it.name != 'platform'}) {
         jvmArgs '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED'
-        jvmArgs '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED'
-        jvmArgs '--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED'
     }
 
     dependencies {
