@@ -213,6 +213,7 @@ GATEWAY_CODE=AG
 _BPX_JOBNAME=${ZWE_zowe_job_prefix}${GATEWAY_CODE} java \
     -Xms${ZWE_configs_heap_init:-32}m -Xmx${ZWE_configs_heap_max:-512}m \
     ${QUICK_START} \
+    --add-opens=java.base/java.lang=ALL-UNNAMED \
     --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
     --add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED \
     --add-opens=java.base/java.util=ALL-UNNAMED \
